@@ -56,4 +56,7 @@ private:
 	bool _overlap_ccap;
 	bool _too_many_ccap_lines;
 	boost::optional<DCPTimePeriod> _last;
+
+	boost::mutex _mutex;
+	bool _stop;
 };
